--- a/styles-crew.css
+++ b/styles-crew.css
@@ -57,13 +57,14 @@
 .image-shadow{
 	background: linear-gradient(to top, hsl(225, 35%, 7%) 5%, transparent 15%);
 	position: relative;
-	z-index: 10;
+	z-index: 1;
 }
 
 .crew .crew-image{
 	mix-blend-mode: overlay;
 	margin: 3rem auto 0;
 	width: clamp(17rem, 6.6231rem + 44.2748vw, 27.875rem);
+	/* z-index: -1; */
 }
 
 
@@ -144,7 +145,10 @@
 	}
 
 	.image-shadow{
-		background: linear-gradient(to top, hsl(225, 35%, 7%) 5%, transparent 15%);
+		/* background: linear-gradient(to top, hsl(225, 35%, 7%) 5%, transparent 15%); */
+
+		background: none;
+
 		grid-column: 2;
 		grid-row: 1 / -1;
 		justify-self: end;
@@ -155,6 +159,11 @@
 		margin: 5.5rem 0 0 0;
 		width: 30rem;
 		height: 40rem;
+
+
+		mix-blend-mode: unset;		
+
+
 	}
 
 }
