--- a/styles-crew.css
+++ b/styles-crew.css
@@ -64,6 +64,7 @@
 	mix-blend-mode: overlay;
 	margin: 3rem auto 0;
 	width: clamp(17rem, 6.6231rem + 44.2748vw, 27.875rem);
+	/* z-index: -1; */
 }
 
 
@@ -84,6 +85,10 @@
 
 	.image-shadow{
 		background: none;
+	}
+
+	.clip:hover{
+		background: hsla(0, 0%, 100%, 0.5);
 	}
 
 }
@@ -144,7 +149,10 @@
 	}
 
 	.image-shadow{
+		/* background: linear-gradient(to top, hsl(225, 35%, 7%) 5%, transparent 15%); */
+
 		background: none;
+
 		grid-column: 2;
 		grid-row: 1 / -1;
 		justify-self: end;
@@ -155,7 +163,11 @@
 		margin: 5.5rem 0 0 0;
 		width: 30rem;
 		height: 40rem;
+
+
 		mix-blend-mode: unset;		
+
+
 	}
 
 }
