--- a/styles-technology.css
+++ b/styles-technology.css
@@ -92,6 +92,19 @@
 	.container-button-techno{
 		margin: 2rem auto 2.5rem;
 	}
+
+
+
+		/* .destination .li-planet:hover{
+		border-bottom: 0.2rem solid hsla(0, 0%, 100%, 0.5);
+	} */
+
+	.button.button-techno:hover{
+
+		border: 0.15rem solid hsl(0, 0%, 100%);
+
+	} 
+
 	
 }
 
